fix response design fix cat animation fix footer text wrapping fix copyright symbol padding

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     font-family: Consolas, Menlo, Monaco, 'Liberation Mono', 'DejaVu Sans Mono', 'Courier New', monospace;
     background-color: #000;
     color: #ff7e00;
-    font-size: 13px;
+    font-size: 1.9vh;
     /* Base font size */
     text-transform: uppercase;
 }
@@ -74,7 +74,7 @@ nav ul {
 nav ul li a {
     text-decoration: none;
     color: #ff7e00;
-    font-size: 135%;
+    font-size: 130%;
     white-space: nowrap;
 }
 
@@ -122,7 +122,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1.8vh;
+    font-size: 95%;
     margin: 1.6vh 0 0.2vh 0;
 }
 
@@ -148,40 +148,36 @@ p.quote::before {
 }
 
 .ascii-art>pre::before {
-    content: 'NO TOUCHING!';
+    content: 'NO TOUCHING!!!';
     position: absolute;
     left: 50%;
     top: 100%;
-    min-width: 200px;
+    min-width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 12px;
-    margin-top: 20px;
+    padding: 5%;
+    margin-top: 15px;
     text-align: center;
-    font-size: 16px;
+    font-size: 40%;
     line-height: 1.3em;
     background-color: #000;
     box-shadow:
-        0 -4px #000,
-        0 -8px #ff7e00,
-        4px 0 #000,
-        4px -4px #ff7e00,
-        8px 0 #ff7e00,
-        0 4px #000,
-        0 8px #ff7e00,
-        -4px 0 #000,
-        -4px 4px #ff7e00,
-        -8px 0 #ff7e00,
-        -4px -4px #ff7e00,
-        4px 4px #ff7e00,
-        4px 12px rgba(0, 0, 0, 0.1),
-        12px 4px rgba(0, 0, 0, 0.1),
-        8px 8px rgba(0, 0, 0, 0.1);
+        0 -0.2rem #000,
+        0 -0.4rem #ff7e00,
+        0.2rem 0 #000,
+        0.2rem -0.2rem #ff7e00,
+        0.4rem 0 #ff7e00,
+        0 0.2rem #000,
+        0 0.4rem #ff7e00,
+        -0.2rem 0 #000,
+        -0.2rem 0.2rem #ff7e00,
+        -0.4rem 0 #ff7e00,
+        -0.2rem -0.2rem #ff7e00,
+        0.2rem 0.2rem #ff7e00;
     font-weight: bold;
     transform-origin: center;
     transform: translate3d(-50%, 0, 0) scale(1.1);
-    animation: ascii-anim .1s linear infinite;
     visibility: hidden;
     opacity: 0;
 }
@@ -218,7 +214,9 @@ footer {
 }
 
 footer p {
-    margin: 0 2vh 0 2vh;
+    padding: 0 2vh 0 2vh;
+    margin: auto;
+    max-width: 71vh;
     text-align: center;
     font-size: 84.6%;
 }
@@ -233,7 +231,7 @@ footer copyright::before {
     display: inline-block;
     vertical-align: text-top;
     transform: scale(1.4);
-    padding-right: 1px;
+    padding-right: 1.5px;
 }
 
 footer copyright>span {
@@ -282,7 +280,7 @@ a:hover {
 
     html,
     body {
-        font-size: 10px;
+        font-size: 3.3vw;
     }
 
     .square-wrapper {
